CSS aligning fixes

--- a/assets/css/book.css
+++ b/assets/css/book.css
@@ -25,7 +25,6 @@ body {
 	color: rgba(0, 0, 0, 0.7);
 	font-family: 'Lato', 'Arial', sans-serif;
 	font-weight: 400;
-	line-height: 1.2;
 }
 
 ul {
@@ -728,7 +727,7 @@ figcaption p {
 	}
 }
 figcaption {
-	padding-left: 40px;
+	padding-left: 45px;
 	text-align: left;
 	position: absolute;
 	top: 0%;
@@ -739,4 +738,9 @@ figcaption {
 .griffin {
 	text-align: center;
 	background-image: url(../images/modedBooks/groovyAndGrails.jpg);
+}
+
+.asideForBook {
+	position: relative;
+	right: 2px !important;
 }
