--- a/assets/css/template_css.css
+++ b/assets/css/template_css.css
@@ -424,6 +424,7 @@ a.readon:hover {
   .year{
   	font-size: 45px;
   	line-height: 1.6em;
+  	color: rgba(0, 0, 0, 0.68);
   }
 
 
